# raspecio

./: Cargo.toml  LICENSE  README.md  build.sh  pyproject.toml  run.py
.github/workflows/: CI.yml
demo/: ADC.ipynb  Blink.ipynb
python/raspecio/: __init__.py  fastapi.py  iodata.py
src/: basic.rs  i2c_adc.rs  lib.rs  lib_adc.rs  lib_basic.rs  spi_adc.rs
