[package]
name = "raspecio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raspecio"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
pyo3-polars = "0.20.0"
polars = "0.46.0"
polars-core = "0.46.0"
rppal = "0.19.0"

